마크다운데이터정제

--- a/jun/Step.2_PDF (심의사례집) 데이터 추출.ipynb
+++ b/jun/Step.2_PDF (심의사례집) 데이터 추출.ipynb
@@ -2953,9 +2953,313 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a15ec18a",
+   "metadata": {},
+   "source": [
+    "# 2. 수정보완(마크다운)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "11814f92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "필수 패키지 설치 중...\n",
+      "설치 오류: Command '['C:\\\\Users\\\\kmj11\\\\anaconda3\\\\envs\\\\gpudm\\\\python.exe', '-m', 'pip', 'install', 'pandas']' returned non-zero exit status 1.\n",
+      "패키지 import 성공!\n",
+      "PDF 변환 시작...\n",
+      "변환 완료: C:\\project\\2stProject_jun\\jun\\과실비율PDF\\(최종)과실비율심의사례_(54MB).md\n",
+      "변환된 내용 길이: 445586 문자\n",
+      "\n",
+      "=== 변환 결과 미리보기 ===\n",
+      "# 페이지 1\n",
+      "\n",
+      "# 페이지 2\n",
+      "\n",
+      "자동차사고 과실비율분쟁 심의 사례\n",
+      "001\n",
+      "발간사..............................................................................................................................................................011\n",
+      "과실비율분쟁 심의위원회 운영현황...................................................................015\n",
+      "제1장 자동차와 자동차의 사고..................................................................................019\n",
+      "직진 대 직진 사고 .............................................................................................\n",
+      "...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1단계: 필수 패키지 설치\n",
+    "import subprocess\n",
+    "import sys\n",
+    "\n",
+    "def install_package(package):\n",
+    "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package])\n",
+    "\n",
+    "print(\"필수 패키지 설치 중...\")\n",
+    "try:\n",
+    "    install_package(\"PyMuPDF\")\n",
+    "    install_package(\"pandas\")\n",
+    "    print(\"설치 완료!\")\n",
+    "except Exception as e:\n",
+    "    print(f\"설치 오류: {e}\")\n",
+    "\n",
+    "# 2단계: 패키지 import 및 PDF 변환 함수\n",
+    "try:\n",
+    "    import fitz  # PyMuPDF\n",
+    "    import pandas as pd\n",
+    "    import io\n",
+    "    import os\n",
+    "    import re\n",
+    "    print(\"패키지 import 성공!\")\n",
+    "    \n",
+    "    def extract_text_from_pdf_simple(pdf_path):\n",
+    "        \"\"\"간단한 PDF 텍스트 추출 (OCR 없음)\"\"\"\n",
+    "        if not os.path.exists(pdf_path):\n",
+    "            return f\"파일을 찾을 수 없습니다: {pdf_path}\"\n",
+    "        \n",
+    "        doc = fitz.open(pdf_path)\n",
+    "        markdown_content = []\n",
+    "        \n",
+    "        for page_num in range(len(doc)):\n",
+    "            page = doc.load_page(page_num)\n",
+    "            \n",
+    "            # 페이지 제목\n",
+    "            markdown_content.append(f\"# 페이지 {page_num + 1}\\n\")\n",
+    "            \n",
+    "            # 텍스트 추출\n",
+    "            text = page.get_text()\n",
+    "            if text.strip():\n",
+    "                # 기본 정리\n",
+    "                lines = text.split('\\n')\n",
+    "                cleaned_lines = []\n",
+    "                \n",
+    "                for line in lines:\n",
+    "                    line = line.strip()\n",
+    "                    if not line:\n",
+    "                        continue\n",
+    "                    \n",
+    "                    # 제목 패턴 감지\n",
+    "                    if re.match(r'^[\\d\\.\\)]+\\s+', line):\n",
+    "                        cleaned_lines.append(f\"### {line}\")\n",
+    "                    else:\n",
+    "                        cleaned_lines.append(line)\n",
+    "                \n",
+    "                markdown_content.append(\"\\n\".join(cleaned_lines) + \"\\n\")\n",
+    "            \n",
+    "            # 표 추출 시도\n",
+    "            blocks = page.get_text(\"dict\")[\"blocks\"]\n",
+    "            for block_idx, block in enumerate(blocks):\n",
+    "                if \"lines\" in block:\n",
+    "                    lines = []\n",
+    "                    for line in block[\"lines\"]:\n",
+    "                        spans = []\n",
+    "                        for span in line[\"spans\"]:\n",
+    "                            spans.append(span[\"text\"])\n",
+    "                        line_text = \" \".join(spans).strip()\n",
+    "                        if line_text:\n",
+    "                            lines.append(line_text)\n",
+    "                    \n",
+    "                    # 표 패턴 감지\n",
+    "                    if len(lines) > 1:\n",
+    "                        table_data = []\n",
+    "                        for line in lines:\n",
+    "                            cols = re.split(r'\\s{3,}|\\t', line)\n",
+    "                            if len(cols) > 1:\n",
+    "                                table_data.append(cols)\n",
+    "                        \n",
+    "                        if len(table_data) > 1:\n",
+    "                            markdown_content.append(f\"## 표 {block_idx + 1}\\n\")\n",
+    "                            # 마크다운 테이블 생성\n",
+    "                            max_cols = max(len(row) for row in table_data)\n",
+    "                            for row in table_data:\n",
+    "                                while len(row) < max_cols:\n",
+    "                                    row.append(\"\")\n",
+    "                            \n",
+    "                            # 헤더\n",
+    "                            header = \"| \" + \" | \".join(table_data[0]) + \" |\"\n",
+    "                            separator = \"| \" + \" | \".join([\"---\"] * max_cols) + \" |\"\n",
+    "                            markdown_content.append(header)\n",
+    "                            markdown_content.append(separator)\n",
+    "                            \n",
+    "                            # 데이터 행\n",
+    "                            for row in table_data[1:]:\n",
+    "                                data_row = \"| \" + \" | \".join(row) + \" |\"\n",
+    "                                markdown_content.append(data_row)\n",
+    "                            markdown_content.append(\"\")\n",
+    "        \n",
+    "        doc.close()\n",
+    "        return \"\\n\".join(markdown_content)\n",
+    "    \n",
+    "    # 3단계: PDF 변환 실행\n",
+    "    pdf_path = r\"C:\\project\\2stProject_jun\\jun\\과실비율PDF\\(최종)과실비율심의사례_(54MB).pdf\"\n",
+    "    \n",
+    "    print(\"PDF 변환 시작...\")\n",
+    "    result = extract_text_from_pdf_simple(pdf_path)\n",
+    "    \n",
+    "    if \"파일을 찾을 수 없습니다\" in result:\n",
+    "        print(result)\n",
+    "        print(\"파일 경로를 확인해주세요.\")\n",
+    "    else:\n",
+    "        # 결과 저장\n",
+    "        output_path = pdf_path.replace('.pdf', '.md')\n",
+    "        with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "            f.write(result)\n",
+    "        \n",
+    "        print(f\"변환 완료: {output_path}\")\n",
+    "        print(f\"변환된 내용 길이: {len(result)} 문자\")\n",
+    "        \n",
+    "        # 처음 500자 미리보기\n",
+    "        print(\"\\n=== 변환 결과 미리보기 ===\")\n",
+    "        print(result[:500])\n",
+    "        print(\"...\")\n",
+    "\n",
+    "except ImportError as e:\n",
+    "    print(f\"import 오류: {e}\")\n",
+    "    print(\"커널을 다시 시작한 후 다시 실행해보세요.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"실행 오류: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fe43112d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== 변환 파일 분석 ===\n",
+      "총 문자 수: 445,586\n",
+      "총 줄 수: 19,855\n",
+      "총 페이지 수: 472\n",
+      "제목 개수: 1837\n",
+      "표 개수: 9\n",
+      "\n",
+      "=== 처음 20줄 미리보기 ===\n",
+      " 1: # 페이지 1\n",
+      " 3: # 페이지 2\n",
+      " 5: 자동차사고 과실비율분쟁 심의 사례\n",
+      " 6: 001\n",
+      " 7: 발간사..............................................................................................................................................................011\n",
+      " 8: 과실비율분쟁 심의위원회 운영현황...................................................................015\n",
+      " 9: 제1장 자동차와 자동차의 사고..................................................................................019\n",
+      "10: 직진 대 직진 사고 ......................................................................................................................................020\n",
+      "11: 사거리 교차로(상대 차량이 측면 방향에서 진입)...................................................................................................020\n",
+      "12: 한쪽 차량 신호위반 사고 (기본과실).......................................................................................................020\n",
+      "13: 한쪽 차량 신호위반 사고 (수정과실).......................................................................................................022\n",
+      "14: (가) 교차로를 벗어나지 못한 사고(A녹색에 직진 진입 적색에 충돌) (수정과실)...................................024\n",
+      "15: 양 차량 신호위반 사고(황색 대 적색) (기본과실).....................................................................................026\n",
+      "16: 양 차량 신호위반 사고(황색 대 적색) (수정과실).....................................................................................028\n",
+      "17: 사거리 교차로(도로폭 기준).....................................................................................................................................030\n",
+      "18: (나) 오른쪽 도로에서 직진 대 왼쪽 도로에서 직진 사고(동일폭) (B선진입) (기본과실)........................030\n",
+      "19: (가) 대로 직진 대 소로 직진 사고(동시진입) (기본과실)......................................................................032\n",
+      "20: (나) 대로 직진 대 소로 직진 사고(B선진입) (기본과실).......................................................................034\n",
+      "\n",
+      "=== 주요 제목 구조 ===\n",
+      "\n",
+      "=== 페이지 1 내용 (최대 30줄) ===\n",
+      " 1: # 페이지 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 변환된 마크다운 파일 내용 확인\n",
+    "import os\n",
+    "\n",
+    "def analyze_converted_file(md_path):\n",
+    "    \"\"\"변환된 마크다운 파일 분석\"\"\"\n",
+    "    \n",
+    "    if not os.path.exists(md_path):\n",
+    "        print(f\"파일이 없습니다: {md_path}\")\n",
+    "        return\n",
+    "    \n",
+    "    with open(md_path, 'r', encoding='utf-8') as f:\n",
+    "        content = f.read()\n",
+    "    \n",
+    "    lines = content.split('\\n')\n",
+    "    \n",
+    "    # 기본 통계\n",
+    "    print(\"=== 변환 파일 분석 ===\")\n",
+    "    print(f\"총 문자 수: {len(content):,}\")\n",
+    "    print(f\"총 줄 수: {len(lines):,}\")\n",
+    "    \n",
+    "    # 페이지 수 계산\n",
+    "    pages = [line for line in lines if line.startswith('# 페이지')]\n",
+    "    print(f\"총 페이지 수: {len(pages)}\")\n",
+    "    \n",
+    "    # 제목/구조 분석\n",
+    "    headers = [line for line in lines if line.startswith('#')]\n",
+    "    print(f\"제목 개수: {len(headers)}\")\n",
+    "    \n",
+    "    # 표 개수\n",
+    "    tables = [line for line in lines if line.startswith('## 표')]\n",
+    "    print(f\"표 개수: {len(tables)}\")\n",
+    "    \n",
+    "    # 처음 20줄 미리보기\n",
+    "    print(\"\\n=== 처음 20줄 미리보기 ===\")\n",
+    "    for i, line in enumerate(lines[:20]):\n",
+    "        if line.strip():\n",
+    "            print(f\"{i+1:2d}: {line}\")\n",
+    "    \n",
+    "    # 목차 추출\n",
+    "    print(\"\\n=== 주요 제목 구조 ===\")\n",
+    "    for line in lines[:100]:  # 처음 100줄에서 제목 찾기\n",
+    "        if line.startswith('### ') and ('.' in line or ')' in line):\n",
+    "            print(line)\n",
+    "    \n",
+    "    return content\n",
+    "\n",
+    "# 변환된 파일 분석\n",
+    "md_path = r\"C:\\project\\2stProject_jun\\jun\\과실비율PDF\\(최종)과실비율심의사례_(54MB).md\"\n",
+    "content = analyze_converted_file(md_path)\n",
+    "\n",
+    "# 특정 페이지 내용 확인 (예: 첫 번째 페이지)\n",
+    "def show_page_content(content, page_num, max_lines=30):\n",
+    "    \"\"\"특정 페이지 내용 표시\"\"\"\n",
+    "    lines = content.split('\\n')\n",
+    "    page_start = -1\n",
+    "    page_end = -1\n",
+    "    \n",
+    "    for i, line in enumerate(lines):\n",
+    "        if line == f\"# 페이지 {page_num}\":\n",
+    "            page_start = i\n",
+    "        elif line.startswith(f\"# 페이지 {page_num + 1}\"):\n",
+    "            page_end = i\n",
+    "            break\n",
+    "    \n",
+    "    if page_start == -1:\n",
+    "        print(f\"페이지 {page_num}을 찾을 수 없습니다.\")\n",
+    "        return\n",
+    "    \n",
+    "    if page_end == -1:\n",
+    "        page_end = len(lines)\n",
+    "    \n",
+    "    print(f\"\\n=== 페이지 {page_num} 내용 (최대 {max_lines}줄) ===\")\n",
+    "    page_lines = lines[page_start:page_end]\n",
+    "    \n",
+    "    for i, line in enumerate(page_lines[:max_lines]):\n",
+    "        if line.strip():\n",
+    "            print(f\"{i+1:2d}: {line}\")\n",
+    "    \n",
+    "    if len(page_lines) > max_lines:\n",
+    "        print(f\"... (총 {len(page_lines)}줄 중 {max_lines}줄만 표시)\")\n",
+    "\n",
+    "# 첫 번째 페이지 내용 확인\n",
+    "if content:\n",
+    "    show_page_content(content, 1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f039ed1b",
+   "id": "06c4be93",
    "metadata": {},
    "outputs": [],
    "source": []
